=========
Changelog
=========

This file keeps track of all notable changes to the Slurm Charms.

Unreleased
----------

0.8.3 - 2021-11-05
------------------

- add labels to Fluentbit logs: cluster-name, partition-name, hostname, service
- add user-group relation to create user and group on the system
- fix typos in unit status

0.8.2 - 2021-10-13
------------------

- fix changing infiniband repos on Ubuntu
- fix fluentbit parser for slurm logs
- fix creation of user and group when those already exist

0.8.1 - 2021-10-07
------------------

- use Omnivector Solutions' RPM repository to install Slurm
- add Fluentbit relation to forward logs from all the Slurm Charms

0.8.0 - 2021-09-13
------------------

- fix slurmd crashing when etcd in slurmctld is down/not-started/unreachable
- allow installing Slurm from different repositories on Ubuntu
- use Omnivector's PPA for installing Slurm on Ubuntu

0.7.0 - 2021-08-09
------------------

- fix: reduce number of events when a slurmd unit is added/removed
- fix #111: install bullseye gpg keys from files
- add support for Ubuntu partitions on CentOS deploys
- add influxdb-info action to slurmctld
- add grafana relation for slurmctld
- add influxdb relation for accouting and profiling of jobs with the SLURM
  InfluxDB plugin
- add acct gather configuration options
- handle update-status hook to constantly give feedback about charms' status
- add .jujuignore to reduce size of final charm files
- fix cache of partition_name in slurmd charm
- improve description of charm's state in juju status
- fix race condition on relation data exchange between slurmctld and slurmdbd
- change default partition name from juju-compute-random to osd-appname
- fix slurmctld crashing when removing a slurmd application

0.6.6 - 2021-07-01
------------------

- fix checks for munge when the code can't run subprocess as another UID

0.6.5 - 2021-06-28
------------------
